[package]
name = "interact"
version = "0.3.0"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A framework for online program state introspection"
homepage = "https://github.com/interact-rs/interact"
repository = "https://github.com/interact-rs/interact"
# documentation = "" TODO Github pages
keywords = ["prompt", "reflection", "introspection", "interact", "cli"]
categories = ["command-line-interface"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "src/**/*.pest", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
interact_derive = "0.3.0"
ron = "0.4"
pest = "2.0.1"
pest_derive = "2.0.1"

[dev-dependencies]
pretty_assertions = "0.5.1"
