[package]
name = "interact_derive"
version = "0.3.2"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A framework for online program state introspection"
homepage = "https://github.com/interact-rs/interact"
repository = "https://github.com/interact-rs/interact"
documentation = "https://interact-rs.github.io/interact/book"
keywords = ["prompt", "reflection", "introspection", "interact", "cli"]
categories = ["command-line-interface"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["extra-traits", "full"]  }
quote = "0.6"
proc-macro2 = "0.4"
