[package]
name = "interact_prompt"
version = "0.3.0"
authors = ["Dan Aloni <alonid@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A framework for online program state introspection"
homepage = "https://github.com/interact-rs/interact"
repository = "https://github.com/interact-rs/interact"
# documentation = "" TODO Github pages
keywords = ["prompt", "reflection", "introspection", "interact", "cli"]
categories = ["command-line-interface"]
readme = "crates-io.md"
include = ["Cargo.toml", "src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
rustyline = "2.1.0"
interact = "0.3.0"
lazy_static = "1.2"
ansi_term = "0.11"

[dev-dependencies]
structopt = "0.2"
structopt-derive = "0.2"
rand = "=0.5"
